--- a/adapt/people.html
+++ b/adapt/people.html
@@ -349,7 +349,7 @@
           <div class="col">
             <a href="https://www.linkedin.com/in/alex-broihier88/" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/alex.jpeg" loading="lazy" class="card-img-top" alt="Alex Broihier">
+                <img src="members/alex.jpg" loading="lazy" class="card-img-top" alt="Alex Broihier">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -400,7 +400,8 @@
                   <div>
                     <h5 class="card-title mb-2">
                       <div>Dhruv</div>
-                      <div>Sundararaman</div>
+                      <div>Sundararam</div>
+                      <!-- <div>Sundararam</div> -->
                     </h5>
                     <!-- <p class="mb-2 card-label"><strong>Research Areas:</strong></p>
                     <ul class="mb-3 ps-3">
@@ -464,7 +465,7 @@
           <div class="col">
             <a href="https://www.linkedin.com/in/kaustubh-khulbe-b97320208/" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/khulbe.jpeg" loading="lazy" class="card-img-top" alt="Kaustubh Khulbe">
+                <img src="members/khulbe.jpg" loading="lazy" class="card-img-top" alt="Kaustubh Khulbe">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -510,7 +511,7 @@
           <div class="col">
             <a href="https://www.linkedin.com/in/max-gendeh/" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/max.jpeg" loading="lazy" class="card-img-top" alt="Max Gendeh">
+                <img src="members/max.jpg" loading="lazy" class="card-img-top" alt="Max Gendeh">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -533,7 +534,7 @@
           <div class="col">
             <a href="https://www.linkedin.com/in/nikhiljayakumar-/" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/nikhil.jpeg" loading="lazy" class="card-img-top" alt="Nikhil Jayakumar">
+                <img src="members/nikhil.jpg" loading="lazy" class="card-img-top" alt="Nikhil Jayakumar">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -556,7 +557,7 @@
           <div class="col">
             <a href="https://github.com/singhrayan" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/rayan.jpeg" loading="lazy" class="card-img-top" alt="Rayan Singh">
+                <img src="members/rayan.jpg" loading="lazy" class="card-img-top" alt="Rayan Singh">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -612,7 +613,7 @@
           <div class="col">
             <a href="https://www.linkedin.com/in/yufengwang05/" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/yufeng.jpeg" loading="lazy" class="card-img-top" alt="Yufeng Wang">
+                <img src="members/yufeng.jpg" loading="lazy" class="card-img-top" alt="Yufeng Wang">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -631,8 +632,11 @@
                       <a href="https://www.ideals.illinois.edu/items/127532" target="_blank" class="card-link">A framework for programming temporal gnns</a>
                     </p> -->
 
-                    <p class="mb-2 card-label"><strong>Now at:</strong></p>
-                    <p class="card-position mb-3 ps-3">Compiler Engineer at Tesla</p>
+                    <p class="mb-2 card-label"><strong>Now:</strong></p>
+                    <p class="card-position mb-3">
+                      <div>Compiler Engineer</div>
+                      <div>@ Tesla</div>
+                    </p>
                   </div>
 
                   <div class="mt-auto">
@@ -664,8 +668,11 @@
                       <a href="" target="_blank" class="card-link">Verifying XLA tensor rewrite rules</a>
                     </p> -->
 
-                    <p class="mb-2 card-label"><strong>Now at:</strong></p>
-                    <p class="card-position mb-3 ps-3">MS Student at Harvard</p>
+                    <p class="mb-2 card-label"><strong>Now:</strong></p>
+                    <p class="card-position mb-3">
+                      <div>Masters Student</div>
+                      <div>@ Harvard</div>
+                    </p>
                   </div>
 
                   <div class="mt-auto">
@@ -697,8 +704,11 @@
                       <a href="" target="_blank" class="card-link">Code generation for sparse attention</a>
                     </p>
  -->
-                    <p class="mb-2 card-label"><strong>Now at:</strong></p>
-                    <p class="card-position mb-3 ps-3">PhD Student at UIUC</p>
+                    <p class="mb-2 card-label"><strong>Now:</strong></p>
+                    <p class="card-position mb-3">
+                      <div>PhD Student</div>
+                      <div>@ UIUC</div>
+                    </p>
                   </div>
 
                   <div class="mt-auto">
@@ -730,8 +740,11 @@
                       <a href="" target="_blank" rel="noopener noreferrer" class="card-link">Optimizations for t-gnns</a>
                     </p> -->
 
-                    <p class="mb-2 card-label"><strong>Now at:</strong></p>
-                    <p class="card-position mb-3 ps-3">PhD Student at UIUC</p>
+                    <p class="mb-2 card-label"><strong>Now:</strong></p>
+                    <p class="card-position mb-3">
+                      <div>PhD Student</div>
+                      <div>@ UIUC</div>
+                    </p>
                   </div>
 
                   <div class="mt-auto">
@@ -763,8 +776,11 @@
                       <a href="" target="_blank" class="card-link">Optimizing convolution computations</a>
                     </p> -->
 
-                    <p class="mb-2 card-label"><strong>Now at:</strong></p>
-                    <p class="card-position mb-3 ps-3">Compiler Engineer at NVIDIA</p>
+                    <p class="mb-2 card-label"><strong>Now:</strong></p>
+                    <p class="card-position mb-3">
+                      <div>Compiler Engineer</div>
+                      <div>@ NVIDIA</div>
+                    </p>
                   </div>
 
                   <div class="mt-auto">
@@ -777,7 +793,7 @@
           <div class="col">
             <a href="https://www.linkedin.com/in/hao-guo-396566279/" target="_blank" rel="noopener noreferrer" class="card-link-wrapper">
               <div class="card person-card h-100 shadow-sm" id="person-card">
-                <img src="members/hao.jpeg" loading="lazy" class="card-img-top" alt="Hao Guo">
+                <img src="members/hao.jpg" loading="lazy" class="card-img-top" alt="Hao Guo">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
                     <h5 class="card-title mb-2">
@@ -796,8 +812,11 @@
                       <a href="" target="_blank" class="card-link">GPU kernel optimizations</a>
                     </p> -->
 
-                    <p class="mb-2 card-label"><strong>Now at:</strong></p>
-                    <p class="card-position mb-3 ps-3">Compiler Engineer at NVIDIA</p>
+                    <p class="mb-2 card-label"><strong>Now:</strong></p>
+                    <p class="card-position mb-3">
+                      <div>Compiler Engineer</div>
+                      <div>@ NVIDIA</div>
+                    </p>
                   </div>
 
                   <div class="mt-auto">
