new paper at EXAIT@ICML 2025

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
               <h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
             </header>
             <ul>
+              <li><b>Jun 12, 2025:</b> Research work on "Automated Data Selection for Learned Cost Models" was accepted at <b>EXAIT@ICML 2025</b>.</li>
 			        <li><b>May 01, 2025:</b> Research work on "ML-based Cost Models for Emerging Sparse Accelerators" was accepted at <b>ICML 2025</b>.</li>
 			        <li><b>Jan 01, 2025:</b> Appointed as <b>Vice Chair</b> of <b>IEEE MGA Student Activities Committee (Global)</b>.</li>
 			        <li><b>Apr 04, 2024:</b> Awarded the <b>Graduate Research Fellowship (NSF-GRFP)</b> by the <b>National Science Foundation</b>.</li>
